<resources>
    <string name="app_name">Shoe Store</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="skip">Skip</string>
    <string name="lorem_ipsum_description">
        Lorem Ipsum is simply dummy text of the printing and typesetting i
        ndustry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="login_shoe_store">Shoe Store - Login</string>
    <string name="lorem_ipsum_instruction">Lorem Ipsum</string>
    <string name="welcome_shoe_store">Shoe Store - Welcome</string>
    <string name="instructions_shoe_store">Shoe Store - Instructions</string>
    <string name="detail_shoe_store">Shoe Store - Shoe Details</string>
    <string name="list_shoe_store">Shoe Store - Shoe List</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="company">Company</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="add_item">Add item</string>
    <string name="format_shoe_name">Shoe: %s</string>
    <string name="format_size">Size: %s</string>
    <string name="format_company">Company: %s</string>
    <string name="format_description">Description: %s</string>
</resources>
