<?xml version="1.0" encoding="utf-8"?>
<!--
   it's better to use ConstraintLayout because it's a complicated layout.
   this layout has many components. ConstraintLayout is more efficient for complex layouts
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_margin">

        <TextView
            android:id="@+id/shoe_text"
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/format_shoe_name(shoe.name)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shoe_name" />

        <TextView
            android:id="@+id/size_text"
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/format_size(String.valueOf(shoe.size))}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shoe_size" />

        <TextView
            android:id="@+id/company_text"
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/format_company(shoe.company)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_text"
            tools:text="@string/company" />

        <TextView
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/format_description(shoe.description)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_text"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>