<?xml version="1.0" encoding="utf-8"?>
<!--
   it's better to use ConstraintLayout because it's a complicated layout.
   this layout has many components. ConstraintLayout is more efficient for complex layouts
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcome"
            type="com.udacity.shoestore.models.Welcome" />

        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.screens.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_margin"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/title_text"
            style="@style/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{welcome.title}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lorem_ipsum_title" />

        <TextView
            android:id="@+id/description_text"
            style="@style/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{welcome.description}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/skip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            tools:text="@string/lorem_ipsum_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> welcomeViewModel.onSkip()}"
            android:text="@string/skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>